Color contrast AAA level corrected

--- a/styles/base.css
+++ b/styles/base.css
@@ -110,7 +110,7 @@ footer {
 }
 
 .active {
-    background-color: #85532a;
+    background-color: #81491b;
     font-weight: 700;
 }
 
